--- a/source/styles/adjusment.scss
+++ b/source/styles/adjusment.scss
@@ -41,8 +41,8 @@
 }
 
 .container {
-    max-width: rem(1280px);
-    width: 100%;
+    // max-width: rem(1280px);
+    // width: 100%;
     position: relative;
     display: flex;
     justify-content: center;
