--- a/source/pages/main-light/main-light.scss
+++ b/source/pages/main-light/main-light.scss
@@ -682,7 +682,7 @@ body {
         display: flex;
         justify-content: space-between;
         align-items: flex-start;
-        margin-bottom: rem(20px);
+        margin-bottom:42px;
         @include phones{
             margin-bottom: 34px;
         }
