--- a/source/pages/main-temperature/main-temperature.scss
+++ b/source/pages/main-temperature/main-temperature.scss
@@ -642,7 +642,7 @@ body {
         border-radius: 20px;
         display: flex;
         flex-direction: column;
-        padding:rem(25px);
+        padding:rem(20px);
         width: 100%;
         position: relative;
         margin-bottom: rem(20px);
@@ -659,6 +659,11 @@ body {
 
     @include phones{
         font-size: 18px;
+    }
+    &_smaller{
+        @include phones{
+            font-size: rem(18px);
+        }     
     }
     }
 
@@ -678,7 +683,7 @@ body {
         display: flex;
         justify-content: space-between;
         align-items: flex-start;
-        margin-bottom: rem(20px);
+        margin-bottom:42px;
         @include phones{
             margin-bottom: 34px;
         }
@@ -753,9 +758,15 @@ body {
         margin-bottom: rem(20px);
     }
     &-bright{
-        width: rem(24px);
-        height: rem(24px);
+        width: 24px;
+        height: 24px;
         fill: none;
+    }
+
+    &-light{
+        @include phones{
+            display: none;
+        }
     }
 }
 
@@ -787,6 +798,15 @@ justify-content: space-between;
 top: rem(19px);
 padding: 0 20px;
 
+@include phones{
+
+    flex-direction: column;
+    top: 22px;
+    width: 60px;
+    height: 318px;
+    padding: 0 16px;
+}
+
 &__temperature{
     @include phones{
         top:10px;
@@ -808,6 +828,7 @@ width: auto;
 }
 
 .popap-gallery__btn{
+    
     @include phones{
     border-radius: 20px;
 }
@@ -970,6 +991,71 @@ box-shadow: 0 1px 10px -7px rgba(0,0,0,0.50);
                     right: 15%;
                     transform: translate(-15%,-95%);
                 }
+                }
+    }
+
+
+input#light[type="range"]{
+    -webkit-appearance: none;
+    -moz-apperance: none;
+    width: 100%;
+    height: rem(60px);
+    background-image: linear-gradient(-85deg,#FF9E00  2%,  #FFE682 98%);
+    border-radius: 30px;
+
+    @include phones{
+        width: 60px;
+    height: 336px;
+    background-image: linear-gradient(-180deg,#FF9E00  2%,  #FFE682 98%);
+    }
+
+    &::-moz-range-track {
+        -moz-apperance: none;
+        width: 100%;
+        height: rem(60px);
+        background-image: linear-gradient(-85deg,#FF9E00  2%,  #FFE682 98%);
+        border-radius: 30px;
+        @include phones{
+            width: 60px;
+        height: 336px;
+        background-image: linear-gradient(-180deg,#FF9E00  2%,  #FFE682 98%);
+        }
+    }
+
+    &::-ms-track {
+        width: 100%;
+        height: rem(60px);
+        background-image: linear-gradient(-85deg,#FF9E00  2%,  #FFE682 98%);
+        border-radius: 30px;
+        @include phones{
+            width: 60px;
+        height: 336px;
+        background-image: linear-gradient(-180deg,#FF9E00  2%,  #FFE682 98%);
+        }
+    }
+    &::-ms-thumb{
+        width:60px;
+        height:60px;
+        border-radius:35px;
+        border: 4px solid #ffffff;
+        cursor:pointer;
+    }
+        &::-webkit-slider-thumb{
+            -webkit-appearance:none;
+            width:60px;
+            height:60px;
+            border-radius:35px;
+            border: 4px solid #ffffff;
+            cursor:pointer;
+            }
+            &::-moz-range-thumb {
+                -moz-apperance:none;
+                width:60px;
+                height:60px;
+                border-radius:35px;
+                border: 4px solid #ffffff;
+                cursor:pointer;
+                background-color: rgba(255, 255, 255, 0.01);
                 }
     }
 
