--- a/source/pages/main/main.scss
+++ b/source/pages/main/main.scss
@@ -163,6 +163,7 @@
     @include phones {
         width: 100%;
         margin-left: 0;
+        margin-bottom: 31px;
     }
 }
 
@@ -171,6 +172,9 @@
     font-size: rem(18px);
     color: #333333;
     font-weight: 700;
+    @include phones{
+        margin-bottom: 20px;
+    }
 }
 
 .temperature-street-drizzle {
