--- a/source/pages/main/index.scss
+++ b/source/pages/main/index.scss
@@ -91,7 +91,7 @@
 
 .greeting-main {
     display: flex;
-    width: 66%;
+    width: 65%;
     flex-direction: column;
     align-items: flex-start;
     @include phones {
@@ -332,6 +332,8 @@
     list-style: none;
     transition: margin-left 250ms;
     font-size: 0;
+
+    padding: 2px 2px 4px;
 }
 
 .gallery__nav_vertical {
@@ -467,13 +469,9 @@
 
 .favorite-devices {
     width: 100%;
-    padding-left: rem(40px);
     flex-grow: 1;
     display: flex;
     flex-direction: column;
-    @include phones {
-        padding-left: 0;
-    }
 
     &__carousel{
         flex-grow: 1;
